--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "pestphp/pest-plugin-laravel": "^3.2"
     },
     "autoload": {
+        "files": ["app/Helpers/helpers.php"],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
